Ignore engine, onnx.data, and output image files

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,6 @@ rtdetr_pytorch/output/
 rtdetr_pytorch/dataset/
 rtdetrv2_pytorch/output/
 rtdetrv2_pytorch/dataset/
+rtdetrv2_pytorch/*.engine
+rtdetrv2_pytorch/*.onnx.data
+rtdetrv2_pytorch/output.jpg
