--- a/rtdetrv2_pytorch/configs/dataset/coco_player.yml
+++ b/rtdetrv2_pytorch/configs/dataset/coco_player.yml
@@ -12,8 +12,8 @@ train_dataloader:
   type: DataLoader
   dataset: 
     type: CocoDetection
-    img_folder: C:\Users\cdmts\OneDrive\Desktop\fine-tuning-obj-det\dataset\images\train
-    ann_file: C:\Users\cdmts\OneDrive\Desktop\fine-tuning-obj-det\dataset\annotations\cvat_instances_train.json
+    img_folder: /home/saurab/Desktop/fine-tuning-obj-detect/dataset/images/train
+    ann_file: /home/saurab/Desktop/fine-tuning-obj-detect/dataset/annotations/cvat_instances_train.json
     return_masks: False
     transforms:
       type: Compose
@@ -28,8 +28,8 @@ val_dataloader:
   type: DataLoader
   dataset: 
     type: CocoDetection
-    img_folder: C:\Users\cdmts\OneDrive\Desktop\fine-tuning-obj-det\dataset\images\val
-    ann_file: C:\Users\cdmts\OneDrive\Desktop\fine-tuning-obj-det\dataset\annotations\cvat_instances_val.json
+    img_folder: /home/saurab/Desktop/fine-tuning-obj-detect/dataset/images/val
+    ann_file: /home/saurab/Desktop/fine-tuning-obj-detect/dataset/annotations/cvat_instances_val.json
     return_masks: False
     transforms:
       type: Compose
